...
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@color/color_white"
                    android:headerBackground="@color/colorPrimaryDark" />

                <Button
                    android:id="@+id/btn_scroll_to_events"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/color_1"
                    android:drawableRight="@drawable/ic_baseline_arrow_forward_24"
                    android:text="Show Events"
                    android:textColor="@color/color_white" />
...
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtDatePicked"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Showing Events for: \n ${date}"
                    android:textColor="@color/color_white"
                    android:textSize="30sp"
...
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtDatePicked">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/calendarRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtDatePicked"
                        tools:itemCount="2"
                        tools:listitem="@layout/card_event" />
...
                </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
            </LinearLayout>
        </LinearLayout>
    </HorizontalScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        android:backgroundTint="@color/color_1"
        android:tint="@color/color_white"
...
