<resources>
    <string name="app_name">TeamCom</string>

    <!--activity_login_reg-->
    <string name="btnLogin">Login With Email</string>
    <string name="btnRegister">Register With Email</string>
    <string name="btnReset">Reset Password</string>
    <string name="btnCheck">Check Authentication</string>
    <string name="btnShowReg">Create An Account</string>
    <string name="btnShowLogin">Login To Your Account</string>
    <string name="hintLgnEmail">Email</string>
...

    <string name="account">Done for today?</string>
    <string name="menu_logout">Logout</string>


    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--fragment_settings-->
    <string name="txtRoles">Roles</string>
    <string name="txtMembers">Members</string>
...
    <string name="title_create_conversations">Start a Conversation</string>
    <string name="title_news_feed">News Feed</string>
    <string name="title_notif">Notifications</string>
    <string name="title_reminders">Reminders</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="end">Meeting Duration</string>
    <string name="end_">Meeting Duration (Hours)</string>
    <string name="select_date">Date</string>
    <string name="btnDateSelect">Select Date</string>
    <string name="btnDateRes">Reschedule</string>
    <string name="participant_select">Select Participants</string>
...
